<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_add_cash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/select_bank"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6">

                    <Spinner
                        android:id="@+id/sp_selecBankName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom_border_green" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/sp_selecBankName"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/input_icon" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.4"
                    android:text="@string/account_type"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text" />

                <TextView
                    android:id="@+id/tv_personal_cash"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:background="@color/login_background"
                    android:gravity="center"
                    android:paddingBottom="7dp"
                    android:paddingTop="7dp"
                    android:text="@string/Personal"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv_business_cash"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_weight="0.3"
                    android:background="@drawable/tab_background"
                    android:gravity="center"
                    android:paddingBottom="7dp"
                    android:paddingTop="7dp"
                    android:text="@string/Bussiness"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/bill_date"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    android:layout_weight="0.6"
                    android:backgroundTint="@color/edit_text"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_date_addCash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="8dp"
                        android:layout_toLeftOf="@+id/iv_date_picker"
                        android:text="27 August 2015"
                        android:textColor="@color/gray_add" />

                    <ImageView
                        android:id="@+id/iv_datePicker_addCash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/calender" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/tv_date_biller"
                        android:layout_marginTop="@dimen/default_margin_half"
                        android:background="@color/edit_text" />
                    />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/bill_amount"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text" />

                <EditText
                    android:id="@+id/et_bill_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:backgroundTint="@color/edit_text"
                    android:drawableLeft="@drawable/rupee" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/paid_to"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text" />

                <EditText
                    android:id="@+id/et_paid_to"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:backgroundTint="@color/edit_text" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/login_background"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@color/login_background"
                    android:text="@string/select_catagory"
                    android:textColor="@color/white"
                    android:textSize="@dimen/normal_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/a_z"
                    android:textColor="@color/white"
                    android:textSize="@dimen/normal_text" />
            </RelativeLayout>
        </LinearLayout>

        <com.faayda.customviews.CustomGridView
            android:id="@+id/gv_category_add_cash"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@+id/ll_add_cash"
            android:numColumns="4" />
        <TextView
            android:id="@+id/tv_more_category_add_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gv_category_add_cash"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/default_margin_double"
            android:background="@drawable/edit_text_selector_new"
            android:padding="@dimen/default_margin"
            android:text="@string/more_cat"
            android:textColor="@color/black" />

    </RelativeLayout>
</ScrollView>